--- a/home.html
+++ b/home.html
@@ -736,7 +736,8 @@ function updateInventoryUI(inventory) {
   chicken: "Chicken Package",
   bacon: "Bacon Package",
   coffee_beans: "Bag of Coffee",
-  vanilla: "Vanilla Bean",
+  corn_syrup: "Bottled Corn Syrup",
+  vanilla: "Vanilla Bean Bundle",
   ice_cream: "Ice Cream Tub",
   onion: "Onion Bundle",
   tomato: "Tomato Bundle",
