--- a/inventory.html
+++ b/inventory.html
@@ -404,6 +404,7 @@
         <option value="chicken">Chicken</option>
         <option value="bacon">Bacon</option>
         <option value="coffee_beans">Coffee Beans</option>
+        <option value="corn_syrup">Corn Syrup</option>
         <option value="tortilla">Tortillas</option>
         <option value="tomato">Tomatoes</option>
         <option value="goat_cheese">Goat Cheese</option>
@@ -502,6 +503,7 @@ const ingredientLabels = {
   chicken:      "Chicken",
   bacon:        "Bacon",
   coffee_beans: "Coffee",
+  corn_syrup:   "Corn Syrup",
   tortilla:     "Tortillas",
   tomato:       "Tomatoes",
   goat_cheese:  "Goat Cheese",
@@ -555,6 +557,7 @@ function renderInventoryFromData(inventory) {
     { key: 'chicken', label: 'Chicken' },
     { key: 'bacon', label: 'Bacon' },
     { key: 'coffee_beans', label: 'Coffee' },
+    { key: 'corn_syrup', label: 'Corn Syrup' },
     { key: 'tortilla', label: 'Tortillas' },
     { key: 'tomato', label: 'Tomatoes' },
     { key: 'goat_cheese', label: 'Goat Cheese' },
