added patty pounder back

--- a/orders.html
+++ b/orders.html
@@ -542,7 +542,15 @@ const comboDetails = {
       { name: "Coffee", quantity: 10 },
       { name: "Rim Job", quantity: 1 }
     ]
-  }
+  },
+  "Patty Pounder Combo": {
+    price: 650,
+    components: [
+      { name: "The Prickley", quantity: 5 },
+      { name: "Coffee", quantity: 5 },
+      { name: "Rim Job", quantity: 1 }
+    ]
+  },
 };
 
 /* -------- Menu columns (minus Very Vegan + The Torpedo) -------- */
